# biz.dfch.AsdSte100Parser

./: .flake8  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/: __init__.py  __main__.py  grammar.py  grammar_type.py  parser.py
src/biz/dfch/ste100parser/: __init__.py  __main__.py  char.py  grammar.py  (+3 more)
src/grammar/: __init__.py  container.lark  containers.lark  default.lark  integer.lark
tests/: __init__.py  phrase.py  test_parser.py  test_parser_containers.py  test_parser_default.py  test_parser_number.py  test_parser_quoted.py  test_parser_structure.py  test_parser_word.py
tests/grammar/: __init__.py
tests/grammar/container/: __init__.py  test_apostrophe.py  test_bold.py  test_bold_emph.py  test_cite.py  test_code.py  test_containerpy  test_emph.py  test_generic.py  test_heading.py  test_list.py  test_paragraph.py  test_parentheses.py  test_proc.py  test_quote.py  test_text.py  test_texts.py  test_ws.py
tests/grammar/structure/: test_apostrophe.py  test_bold.py  test_bold_emph.py  test_cite.py  test_code.py  test_emph.py  test_generic.py  test_heading.py  test_list.py  test_paragraph.py  test_parentheses.py  test_proc.py  test_quote.py  test_structure.py  test_ws.py
tests/grammar/text/: test_texts.py
tests/test_data/: complex_heading_proc_cite_para_list.md  complex_headings_para_proc_list.md  list_in_paragraph.md  list_in_proc.md  single_paragraph.md  single_paragraph_with_linebreak.md  test_data.py  test_sentence_in_list_item.md
tests/transformer/: __init__.py
(+22 files in other folders)
