[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biz-dfch-ste100parser"
version = "0.1.1"
description = "An ASD STE-100 parser."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "Ronald Rink"}]
maintainers = [  
    { name = "d-fens GmbH" }  
]
dependencies = [
    "lark==1.3.1"
]

# Install project in editable mode:
# python -m pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "build",
]

[project.urls]  
Homepage = "https://github.com/dfensgmbh/biz.dfch.AsdSte100Parser.git"  
Issues = "https://github.com/dfensgmbh/biz.dfch.AsdSte100Parser/issues"

[project.scripts]
ste100-parser = "biz.dfch.ste100parser.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"biz.dfch.ste100parser" = ["grammar/*.lark"]
